# Renpy-Translator

./: .cursor_prompt  .cursorrules  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CHANGELOG_RECENT.md  CLAUDE.md  CONTRIBUTING.md  EXPANSION_PLAN.md  FILE_CLEANUP_REPORT.md  GROK_INTEGRATION_COMPLETE.md  HANDOFF.md  IMPLEMENTATION_PLAN_V11_REVISED.md  INSTALL_ALL.bat  LICENSE  PACKAGE.bat  README.md  SECURITY.md  START.bat  START_FULL_CHECK.bat  START_SAFE.bat  TEST_PLAN.md  api_client.py  basement.rpy  build.py  config.py  direct_translator.py  direct_translator_dryrun.py  engine_base.py  engine_detector.py  file_processor.py  font_config.example.json  font_patch.py  glossary.py  gui.py  gui_dialogs.py  gui_handlers.py  gui_pipeline.py  lang_config.py  (+23 more)
.git-hooks/: README.md  pre-commit
_archive/: CHANGELOG_FULL.md  CHANGELOG_RECENT_r50.md  CHANGELOG_RECENT_r51.md  EVOLUTION.md  EXPANSION_PLAN_FULL.md  TEST_PLAN_r50.md
core/: api_client.py  api_plugin.py  config.py  file_safety.py  font_patch.py  glossary.py  http_pool.py  lang_config.py  pickle_safe.py  prompts.py  runtime_hook_emitter.py  translation_db.py  translation_utils.py
custom_engines/: example_echo.py
data/: prompt_template.json
docs/: API_GUIDE.md  API_TRANSLATION_GUIDE.md  ARCHITECTURE.md  CHANGELOG.md  CODE_OPTIMIZATION.md  DEVELOPMENT.md  ENHANCEMENT_PLAN.md  GROK_API_GUIDE.md  OPTIMIZATION_COMPLETE.md  REFERENCE.md  SETUP_GUIDE.md  USER_GUIDE.md  constants.md  cuda_setup.md  dataflow_pipeline.md  dataflow_translate.md  engine_guide.md  error_codes.md  font_replacement.md  gpu_optimization.md  gui_usage.md  placeholder_extraction_test_report.md  quality_chain.md  quickstart.md  roadmap.md  troubleshooting.md  功能清单.md
engines/: __init__.py  csv_engine.py  engine_base.py  engine_detector.py  generic_pipeline.py  renpy_engine.py  rpgmaker_engine.py
examples/: core_modules_demo.py  translate_integration.py
file_processor/: __init__.py  checker.py  patcher.py  splitter.py  validator.py
pipeline/: __init__.py  gate.py  helpers.py  stages.py
scripts/: install_hooks.sh  verify_docs_claims.py  verify_workflow.py
tests/: conftest.py  glossary_test.json  sample_strings.rpy  sample_triggers.rpy  sample_triggers_trans.rpy  smoke_test.py  test_all.py  test_api_client.py  test_autofix.py  test_batch1.py  test_cli.py  test_core_modules.py  test_csv_engine.py  test_custom_engine.py  test_dict_utils.py  test_diff_menu.py  test_diff_parser.py  test_direct_pipeline.py  test_engines.py  test_engines_rpgmaker.py  test_extract.py  test_file_processor.py  test_file_safety.py  test_file_safety_c5.py  test_glossary_prompts_config.py  test_integration.py  test_lint_fixer.py  test_merge.py  test_merge_translations_v2.py  test_multilang_run.py  test_new_features.py  test_override_categories.py  test_patch.py  test_progress_tracker_language.py  test_repo_rename_consistency.py  test_rpa_unpacker.py  test_rpyc_decompiler.py  test_runtime_hook.py  test_runtime_hook_filter.py  test_runtime_hook_v2_schema.py  (+14 more)
tools/: _rpyc_shared.py  _rpyc_tier2.py  _translation_editor_html.py  analyze_writeback_failures.py  autofix.py  build.py  build_memory.py  diff_dirs.py  extract.py  fix_english_leakage.py  font_patch.py  gen_hooks.py  generate_dict.py  init_cuda.ps1  launcher.ps1  menu.ps1  menu_backup_20251110_204628.ps1  merge.py  merge_translations_v2.py  patch.py  patch_font_now.py  pipeline.py  prefill.py  renpy_lint_fixer.py  renpy_upgrade_tool.py  replace_fonts.py  revalidate.py  review_generator.py  (+15 more)
(+48 files in other folders)
