[project]
name = "renpy-tools"
version = "0.1.0"
description = "Ren'Py translation toolkit for extraction, prefill, patching, building, validation and proofreading"
authors = [{ name = "Your Name" }]
requires-python = ">=3.10"
dependencies = [
	"click>=8.1",
	"python-dateutil>=2.8",
]

[project.optional-dependencies]
# 可选性能/功能增强组件
speed = [
	"rapidfuzz>=3.5",
	"regex>=2023.10.3",
]
ui = [
	"rich>=13.0",
]
tokens = [
	"tiktoken>=0.5.1",
]
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
renpy-tools = "renpy_tools.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
