[project]
name = "renpy-tools"
version = "3.0.0"
description = "Ren'Py translation toolkit for extraction, prefill, patching, building, validation and proofreading"
authors = [{ name = "Dean" }]
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }

dependencies = [
    "rich>=13.7.0",      # 彩色日志和进度条
    "rapidfuzz>=3.9.6",  # 模糊匹配（字典回填）
]

[project.optional-dependencies]
# HTTP 请求（翻译器需要）
http = [
    "requests>=2.31.0",
]
# Token 计数（精确批次分割）
tokens = [
    "tiktoken>=0.5.1",
]
# 完整安装
all = [
    "requests>=2.31.0",
    "tiktoken>=0.5.1",
]
# 开发依赖
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
renpy-tools = "renpy_tools.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py310"
line-length = 120
src = ["src", "tools", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",    # line too long (handled by formatter)
    "B905",    # zip() without strict= (Python 3.10+ only)
    "SIM108",  # ternary operator (readability)
    "RUF001",  # ambiguous unicode (Chinese characters)
    "RUF002",  # ambiguous unicode in docstring
    "RUF003",  # ambiguous unicode in comment
]

[tool.ruff.lint.isort]
known-first-party = ["renpy_tools"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
